tests/paczka1/small_fuzzy/14776873.err
Error in line 5: ngVju S998 81,3
Error in line 1: 9Agw A330 72,6
